[package]
name = "wlshot"
version = "0.1.0"
edition = "2021"

#[dependencies]
#glib = "0.19.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
package = "gtk4"
version = "0.8.1"
features = ["v4_14"]

[dependencies.chrono]
version = "0.4.37"

[dependencies.xdg]
version = "2.5.2"
